--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href="https://fonts.google.com/specimen/Inter?sidebar.open=true&selection.family=Inter:wght@100;200;300;400;500;600;700;800;900" rel="stylesheet">
     <link rel="stylesheet" href="output.css">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
